# HackATL2025

./: .env.example  Intelligent Dashboard.pptx  README.md  debug_crew.py  pyproject.toml  seed_data.py  test_fresh_tool.py  test_tools.py  test_tools_requests.py  testu.py
.github/workflows/: ci.yml
app/: database.py  main.py
app/agents/: product_agent.py  product_identifier_agent.py  query_analyzer_agent.py  simple_agent.py
app/crews/: product_crew.py
app/routes/: chatbot.py  product.py  simulation.py  weather.py
app/tools/: direct_tools.py  product_tools.py  simple_tools.py
hackatl-dashboard/: package-lock.json  package.json
hackatl-dashboard/app/: page.tsx
